--- a/default.conf
+++ b/default.conf
@@ -10,6 +10,10 @@ server {
         index  index.html index.htm;
     }
 
+    location = /pageshield/ {
+        root   /usr/share/nginx/html/pageshield;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
