--- a/default.conf
+++ b/default.conf
@@ -11,7 +11,7 @@ server {
     }
 
     location = /pageshield/ {
-        index pageshield.html
+        index pageshield.html;
     }
 
     #error_page  404              /404.html;
